--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -5,12 +5,25 @@
         margin-right: -65px;
     }
 
+    &--gutters-large {
+        margin-right: -100 px;
+    }
+
     &--gutters>div {
         padding-right: 65px;
 
     }
 
+    &--gutters-large>div {
+        padding-right: 100px;
+
+    }
+
     @mixin atMedium {
+        &__b-margin-until-medium {
+            margin-bottom: 0;
+        }
+
         &__medium-4 {
             float: left;
             width: 33.33%;
@@ -18,6 +31,11 @@
 
         &__medium-4-larger {
             width: 37%;
+        }
+
+        &__medium-6 {
+            float: left;
+            width: 50%;
         }
 
         &__medium-8 {
