--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,6 +1,8 @@
 .row {
     @mixin clearFix;
-
+    &--t-padding{ 
+       padding-top: 80px;  
+    }
     &--gutters {
         margin-right: -65px;
     }
@@ -8,12 +10,17 @@
     &--gutters-large {
         margin-right: -100 px;
     }
-
+    &--gutters-small { 
+         margin-right: -45px;
+    }
     &--gutters>div {
         padding-right: 65px;
 
     }
+    &--gutters-small>div {
+        padding-right: 45px;
 
+    }
     &--gutters-large>div {
         padding-right: 100px;
 
@@ -47,5 +54,51 @@
             width: 63%;
         }
     }
+     @mixin atLarge {
+        &__b-margin-until-large {
+            margin-bottom: 0;
+        }
 
+        &__large-4 {
+            float: left;
+            width: 33.33%;
+        }
+
+        &__large-4-larger {
+            width: 37%;
+        }
+
+        &__large-6 {
+            float: left;
+            width: 50%;
+        }
+
+        &__large-8 {
+            float: left;
+            width: 66.66%;
+        }
+
+        &__large-8-smaller {
+            width: 63%;
+        }
+    }
+/*begin equal height rules */ 
+&--equal-height-at-medium{ 
+    @mixin atMedium { 
+        display: flex; 
+    }
+    & > div { 
+        float: none; 
+        display: flex; 
+    }
+}
+&--equal-height-at-large{ 
+    @mixin atLarge { 
+        display: flex; 
+    }
+    & > div { 
+        float: none; 
+        display: flex; 
+    }
+}
 }
