--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -12,5 +12,6 @@
 @import 'modules/_generic-content-container';
 @import 'modules/_section-title';
 @import 'modules/_feature-item';
+@import 'modules/_testimonials';
 
 
