--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -13,5 +13,6 @@
 @import 'modules/_section-title';
 @import 'modules/_feature-item';
 @import 'modules/_testimonials';
+@import 'modules/_site-footer';
 
 
