Styled header added functionality

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -3,6 +3,8 @@
 @import 'base/_variables';
 @import 'base/_mixins';
 @import 'base/_global';
+@import 'modules/_site-header';
+@import 'modules/_primary-nav';
 @import 'modules/_large-hero'; 
 @import 'modules/_btn';
 @import 'modules/_wrapper';
