--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,104 +1,88 @@
 .row {
-    @mixin clearFix;
-    &--t-padding{ 
-       padding-top: 80px;  
-    }
+  &--t-padding {
+    padding-top: 80px;
+  }
+
+  @mixin atMedium {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
     &--gutters {
-        margin-right: -65px;
+      column-gap: 5.3%;
     }
 
     &--gutters-large {
-        margin-right: -100 px;
+      column-gap: 8%;
     }
-    &--gutters-small { 
-         margin-right: -45px;
-    }
-    &--gutters>div {
-        padding-right: 65px;
-
-    }
-    &--gutters-small>div {
-        padding-right: 45px;
-
-    }
-    &--gutters-large>div {
-        padding-right: 100px;
-
+    &--gutters-small {
+      column-gap: 3.6%;
     }
 
+    &__b-margin-until-medium {
+      margin-bottom: 0;
+    }
+
+    &__large-1, 
+    __large-2,
+    __large-3,
+    __large-4,
+    __large-5,
+    __large-6,
+    __large-7,
+    __large-8,
+    __large-9,
+    __large-10,
+    __large-11,
+    __large-12 { 
+        grid-column: span 12; 
+    }
+
+    &__medium-4 {
+      grid-column: span 4;
+    }
+
+    &__medium-6 {
+      grid-column: span 6;
+    }
+
+    &__medium-8 {
+      grid-column: span 8;
+    }
+  }
+  @mixin atLarge {
+    &__b-margin-until-large {
+      margin-bottom: 0;
+    }
+
+    &__large-4 {
+     grid-column: span 4; 
+    }
+
+    &__large-6 {
+      grid-column: span 6; 
+    }
+
+    &__large-8 {
+      grid-column: span 8; 
+    }
+
+  }
+  /*begin equal height rules */
+  &--equal-height-at-medium {
     @mixin atMedium {
-        &__b-margin-until-medium {
-            margin-bottom: 0;
-        }
-
-        &__medium-4 {
-            float: left;
-            width: 33.33%;
-        }
-
-        &__medium-4-larger {
-            width: 37%;
-        }
-
-        &__medium-6 {
-            float: left;
-            width: 50%;
-        }
-
-        &__medium-8 {
-            float: left;
-            width: 66.66%;
-        }
-
-        &__medium-8-smaller {
-            width: 63%;
-        }
+      display: flex;
     }
-     @mixin atLarge {
-        &__b-margin-until-large {
-            margin-bottom: 0;
-        }
-
-        &__large-4 {
-            float: left;
-            width: 33.33%;
-        }
-
-        &__large-4-larger {
-            width: 37%;
-        }
-
-        &__large-6 {
-            float: left;
-            width: 50%;
-        }
-
-        &__large-8 {
-            float: left;
-            width: 66.66%;
-        }
-
-        &__large-8-smaller {
-            width: 63%;
-        }
+    & > div {
+      float: none;
+      display: flex;
     }
-/*begin equal height rules */ 
-&--equal-height-at-medium{ 
-    @mixin atMedium { 
-        display: flex; 
+  }
+  &--equal-height-at-large {
+    @mixin atLarge {
+     
     }
-    & > div { 
-        float: none; 
-        display: flex; 
+    & > div {
+      float: none;
+      display: flex;
     }
-}
-&--equal-height-at-large{ 
-    @mixin atLarge { 
-        display: flex; 
-    }
-    & > div { 
-        float: none; 
-        display: flex; 
-    }
-}
+  }
 }
