--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -16,5 +16,6 @@
 @import 'modules/_feature-item';
 @import 'modules/_testimonials';
 @import 'modules/_site-footer';
+@import 'modules/_reveal-item';
 
 
