--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -8,10 +8,10 @@
   li {
     list-style: none;
     display: inline-block;
-    padding: 20px 15px;
+    padding: 11px 15px;
 
     @mixin atMedium {
-      padding-right: 20px;
+      padding: 10px 15px;
     }
   }
   li:last-child {
@@ -34,6 +34,10 @@
       font-size: 1rem;
       padding: 12px 0;
       background-color: transparent;
+
+      & .is-current-link { 
+        color: #fabb69; 
+      }
     }
   }
 }
