--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -9,7 +9,12 @@
     background-color: rgba($mainBlue, 0.55);
   }
   @mixin atMedium {
+    position: fixed; 
     background-color: rgba($mainBlue, 0.3);
+
+    &--dark { 
+      background-color: rgba(23, 51, 72, .85)
+    }
   }
 
   &__btn-container {
@@ -22,15 +27,22 @@
     position: absolute;
     top: 0;
     left: 50%;
-    transform: translateX(-50%);
+    transition: transform .3 ease-out; 
+    transform: translateX(-50%) scale(.8);
+    transform-origin: 50% 0; 
     background-color: $mainBlue;
-    padding: 13px 26px;
+    padding: 25px 36px;
 
     @mixin atMedium {
       left: auto;
       transform: translateX(0);
-      padding: 25px 36px;
+     
+    
+      .site-header--dark & { 
+        transform: scale(.68)
+      }
     }
+
   }
   &__menu-icon {
     width: 20px;
