Completed the nav link highlight functionality

--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,4 +1,16 @@
 .primary-nav {
+  padding-top: 10px;
+
+  @mixin atMedium {
+    padding-top: 0;
+  }
+
+  &--pull-right {
+    @mixin atMedium {
+      float: right;
+    }
+  }
+
   ul {
     margin: 0;
     padding: 0;
@@ -8,12 +20,14 @@
   li {
     list-style: none;
     display: inline-block;
-    padding: 11px 15px;
-
+    padding-right: 7px;
     @mixin atMedium {
-      padding: 10px 15px;
+      padding-right: 20px;
+      float: left;
+      display: block;
     }
   }
+
   li:last-child {
     padding-right: 0;
     @mixin atMedium {
@@ -22,21 +36,21 @@
   }
 
   a {
-    color: #fff;
-    font-weight: 400;
+    color: #FFF;
+    font-weight: 300;
     text-decoration: none;
     display: block;
     padding: 5px 8px;
-    font-size: 0.8rem;
-    background-color: rgba($mainBlue, 0.5);
+    font-size: .8rem;
+    background-color: rgba(47, 85, 114, .5);
 
     @mixin atMedium {
       font-size: 1rem;
       padding: 12px 0;
       background-color: transparent;
 
-      & .is-current-link { 
-        color: #fabb69; 
+      &.is-current-link {
+        color: #fabb69;
       }
     }
   }
