--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -15,6 +15,10 @@
         color: $mainBlue; 
     }
 
+    &__less-margin { 
+        margin-bottom: 1.3rem; 
+        margin-top: 0; 
+    }
     &__icon {
         display: block;
         margin-left: auto;
