--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -17,5 +17,7 @@
 @import 'modules/_testimonials';
 @import 'modules/_site-footer';
 @import 'modules/_reveal-item';
+@import 'modules/_modal';
+@import 'modules/_social-icons';
 
 
